# flowtraicer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NEEDS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: 2026-06-23-xai-walking-skeleton-design.md  2026-06-25-checkpoint-resume-design.md
src/ft/: __init__.py  agent.py  analytics.py  checkpoint.py  extraction.py  llm.py  orchestration.py  recorder.py  registry.py
src/ft/core/: model.py
src/ft/examples/: __init__.py  agentic_step.py  demo_agent.py  hitl_resume.py  session_loop.py  streaming_turn.py
src/ft/langgraph_adapter/: __init__.py  runner.py  state.py
src/ft/server/: __init__.py  app.py
src/ft/server/static/: index.html  style.css
src/ft/store/: postgres.py  reconstruct.py  records.py  redis.py  sqlite.py
src/xai/: __init__.py  analytics.py  audit.py  extraction.py  llm.py  orchestration.py  recorder.py  retention.py  timeline.py
src/xai/core/: __init__.py  model.py
src/xai/examples/: demo_agent.py
src/xai/langgraph_adapter/: __init__.py  runner.py  state.py  topology.py
src/xai/server/: app.py
src/xai/server/static/: app.js  index.html  style.css
src/xai/store/: __init__.py  base.py  postgres.py  reconstruct.py  records.py  redis.py  sqlite.py
tests/: test_adapter.py  test_agentic_step.py  test_analytics.py  test_audit.py  test_cardless_pause.py  test_checkpoint_resume.py  test_checkpointer_factory.py  test_demo_integration.py  test_emit_from_handler.py  test_extraction.py  test_llm.py  test_model.py  test_model_tokens.py  test_orchestration.py  test_recorder.py  test_registry.py  test_resume_contract.py  test_retention.py  test_server.py  test_store.py  test_store_postgres.py  test_store_redis.py  test_streaming.py  test_timeline.py  test_timeline_tokens.py  test_tokens_flow.py  test_trace_state.py  test_turn_tokens.py
