[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xai"
version = "0.0.1"
description = "Map, visualize, monitor, debug, log and audit the steps of an engagement between a user and an agentic AI system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "TeranoAI" }]
keywords = ["agents", "observability", "langgraph", "tracing", "llm", "audit"]

dependencies = [
    "pydantic>=2.7",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# Schema extraction. Instructor's `from_provider` is the multi-provider abstraction;
# install the SDK for the provider you target (extras below, or all via `providers`).
extraction = ["instructor>=1.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
providers = ["openai>=1.0", "anthropic>=0.40", "google-genai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
xai-server = "xai.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# `(str, Enum)` is an intentional, widely-used pattern; don't force StrEnum.
ignore = ["UP042"]
