[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowtraicer"
version = "0.9.2"
description = "Map, visualize, monitor, debug, log and audit the steps of an engagement between a user and an agentic AI system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "TeranoAI" }]
keywords = ["agents", "observability", "langgraph", "tracing", "llm", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "instructor>=1.0",
    "litellm>=1.40",
]

[project.urls]
Homepage = "https://github.com/AlirezaShk/flowtraicer"
Repository = "https://github.com/AlirezaShk/flowtraicer"
Issues = "https://github.com/AlirezaShk/flowtraicer/issues"
Changelog = "https://github.com/AlirezaShk/flowtraicer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Instructor's `from_provider` (used by ft.extraction) can target a specific provider SDK;
# install the one you want (or all via `providers`). LiteLLM (a core dep) already covers most
# providers without these.
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
providers = ["openai>=1.0", "anthropic>=0.40", "google-genai>=1.0"]
# Store backends (the default SQLite backend needs nothing extra).
redis = ["redis>=5"]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "fakeredis>=2.20",
]

[project.scripts]
ft-server = "ft.server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# `(str, Enum)` is an intentional, widely-used pattern; don't force StrEnum.
ignore = ["UP042"]
